# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
gendiff/: __init__.py  diff.py  diff_builder.py  formatter.py  main.py
gendiff/formatters/: formatter.py
gendiff/scripts/: diff.py  main.py  parser.py
tests/: test_diff.py  test_formatter.py  test_integration.py
